--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     </style>
   </head>
   <body>
-    <p>建造中......</p>
-    <p>coming soom...</p>
-    <a href="https://space.bilibili.com/1016692202">B站</a>
+    <p>本域名即将到期，请访问备用域名：<a href="http://boxteam.eu.org/>http://boxteam.eu.org/</a></p>
+    <a href="http://space.bilibili.com/1016692202">哔哩哔哩（bilibili）</a>
 
   </body>
 </html>
